--- a/index.html
+++ b/index.html
@@ -7,26 +7,136 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <header id="header">
-      <img src="#" alt="" />
-      <nav id="nav-bar">
-        <a href="#" class="nav-link">Section 1</a>
-        <a href="#" class="nav-link">Section 2</a>
-        <a href="#" class="nav-link">Section 3</a>
-      </nav>
-    </header>
-    <main>
-      <video src="#" id="video">Video</video>
-      <form action="" id="form">
-        <label for="email" id="email-label">Enter your email address</label>
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="Email address"
-        />
-        <input type="submit" id="submit" />
-      </form>
-    </main>
+    <div id="page-wrapper">
+      <header id="header">
+        <div class="logo">
+          <img
+            id="header-img"
+            src="https://s3.amazonaws.com/freecodecamp/original_trombones.png"
+            alt="Original Trombones logo"
+          />
+        </div>
+        <nav id="nav-bar">
+          <ul>
+            <li><a href="#" class="nav-link">Section 1</a></li>
+            <li><a href="#" class="nav-link">Section 2</a></li>
+            <li><a href="#" class="nav-link">Section 3</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <div class="container"></div>
+
+      <section id="hero">
+        <h1 id="title">TITLE</h1>
+        <p id="description">description</p>
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
+          <label for="email" id="email-label"
+            >Enter your email address to receive catalogue</label
+          >
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email address"
+            required
+          />
+          <input
+            type="submit"
+            id="submit"
+            value="Request Catalogue"
+            class="btn"
+          />
+        </form>
+      </section>
+
+      <div class="container">
+        <section id="features">
+          <div class="grid">
+            <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
+            <div class="desc">
+              <h2>Premium Materials</h2>
+              <p>
+                Our trombones are made using the strongest brass which is
+                sourced locally. This makes their quality and longevity better.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
+            <div class="desc">
+              <h2>Fast Shipping</h2>
+              <p>
+                Once your trombone has been assembled, we offer free next day
+                delivery.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon"><i class="fa fa-3x fa-battery-full"></i></div>
+            <div class="desc">
+              <h2>Quality Assurance</h2>
+              <p>
+                Every trombone is checked by our expert quality assurance
+                specialist. We guarantee that all delivered products meet our
+                100% Gold Standard.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section id="how-it-works">
+          <iframe
+            id="video"
+            height="315"
+            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </section>
+        <section id="pricing">
+          <div class="product" id="tenor">
+            <div class="level">Tenor Trombone</div>
+            <h2>$2100</h2>
+            <ol>
+              <li>Gold finish</li>
+              <li>Single thumb plug</li>
+              <li>12mm bore size</li>
+              <li>Optional engraving</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+          <div class="product" id="bass">
+            <div class="level">Bass Trombone</div>
+            <h2>$2800</h2>
+            <ol>
+              <li>Gold finish</li>
+              <li>Double thumb plugs</li>
+              <li>16mm bore size</li>
+              <li>Optional engraving</li>
+            </ol>
+            <button class="btn">Select</button>
+            <div class="product" id="valve">
+              <div class="level">Valve Trombone</div>
+              <h2>$3500</h2>
+              <ol>
+                <li>Silver finish</li>
+                <li>Single thumb plug</li>
+                <li>13mm bore size</li>
+                <li>Lightweight metal</li>
+              </ol>
+              <button class="btn">Select</button>
+            </div>
+          </div>
+        </section>
+        <footer>
+          <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <span>Copyright 2020, Original Trombones</span>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
